force-app/main/default/objects/Trigger_Handler__mdt/Trigger_Handler__mdt.object-meta.xml
<CustomObject>
    <description>Trigger Handler Class details</description>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger Handlers</pluralLabel>
</CustomObject>