force-app/main/default/objects/Trigger_Handler__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Trigger Handler class needs to be Executed or not</description>
    <inlineHelpText>Whether the Trigger Handler class needs to be Executed or not</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>