force-app/main/default/objects/Trigger_Handler__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Trigger Handler</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>