force-app/main/default/objects/Trigger_Handler__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order in which Trigger Handler Classes needs to be Executed</description>
    <inlineHelpText>Order in which Trigger Handler Classes needs to be Executed</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>