force-app/main/default/objects/Trigger_Handler__mdt/fields/sType__c.field-meta.xml
<CustomField>
    <fullName>sType__c</fullName>
    <description>Object Name for Which the Trigger handler is written</description>
    <inlineHelpText>Object Name for Which the Trigger handler is written</inlineHelpText>
    <label>sType</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>