force-app/main/default/objects/Trigger_Handler__mdt/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>sType__c</columns>
    <columns>Order__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
    <language>en_US</language>
</ListView>