force-app/main/default/objects/Trigger_Handler__mdt/listViews/Platform_Event_Trigger.listView-meta.xml
<ListView>
    <fullName>Platform_Event_Trigger</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>sType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sType__c</field>
        <operation>contains</operation>
        <value>__e</value>
    </filters>
    <label>Platform Event Trigger</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>