force-app/main/default/objects/Trigger_Handler__mdt/listViews/Product_Trigger_Action_Classes.listView-meta.xml
<ListView>
    <fullName>Product_Trigger_Action_Classes</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Description__c</columns>
    <columns>Active__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sType__c</field>
        <operation>equals</operation>
        <value>Product2</value>
    </filters>
    <label>Product Trigger Action Classes</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>